src/css/styles.css
html,
* {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
}
* {
  font-size: 1rem;
}
body {
  margin: 0;
  padding: 0px;
}

main {
  display: flex;
  height: 100%;
}

.hidden {
  display: none;
}

.preview {
  background: white;
  flex: 1;
  padding: 10px;
  height: 100vh;
  overflow-y: auto;
}

.terminal {
  flex: 1;
  font-family: monospace;
  margin: 0px;
  width: 100%;
  height: 100%;
  background: black;
  color: #00ec00;
  font-size: 25px;
  padding: 10px;
  outline-color: red;
  z-index: 1;
}

.notification {
  position: fixed;
  right: 25px;
  width: 30%;
  background: #000;
  color: #fff;
  text-align: center;
  padding: 15px;
  margin: auto;
  border-radius: 4px;
  border: 2px solid rgba(255, 255, 255, 0.25);
  bottom: -100%;
  transition: all 0.25s cubic-bezier(1, 0, 0.7, 1);
  cursor: pointer;
}

.notification.info {
  border: 1px solid rgba(0, 123, 255, 0.25);
  background: rgba(0, 123, 255, 0.25);
  bottom: 25px;
  transition: all 0.5s linear;
}

.notification.success {
  border: 1px solid rgba(0, 255, 0, 0.25);
  background: rgba(0, 255, 0, 0.25);
  bottom: 25px;
  transition: all 0.5s linear;
}

.notification.error {
  border: 1px solid rgba(255, 0, 0, 0.25);
  background: rgba(255, 0, 0, 0.25);
  bottom: 25px;
  transition: all 0.5s linear;
}

.notification.warning {
  border: 1px solid rgba(255, 255, 0, 0.25);
  background: rgba(255, 255, 0, 0.25);
  bottom: 25px;
  transition: all 0.5s linear;
}

/****** custom scrollbar *********/

.suggestion {
  position: absolute;
  color: #00ec00;
  font-style: italic;
  z-index: 10;
  opacity: 0.4;
  font-family: monospace;
  font-size: 25px;
}

::-webkit-scrollbar {
  width: 5px;
}

/* Track */

::-webkit-scrollbar-track {
  background: black;
}

/* Handle */

::-webkit-scrollbar-thumb {
  background: grey;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
  background: yellow;
}

/****** custom scrollbar *********/

